--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=library_management
 logging.level.org.springframework.security=DEBUG
 spring.datasource.name=lib_manage
-spring.datasource.url=jdbc:mysql://localhost:3306/lib_manage
+spring.datasource.url=jdbc:mysql://localhost:3306/lib_manage?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 user.controller.enabled=false
